--- a/radiation-robot.html
+++ b/radiation-robot.html
@@ -48,7 +48,7 @@
     </header>
 
     <main class="container py-5">
-        <a href="homePage.html" class="btn btn-custom-green mb-4">← Home</a>
+        <a href="index.html" class="btn btn-custom-green mb-4">← Home</a>
 
         <h1 class="mb-4">Radiation Detection and Assistant Robot</h1>
 
