--- a/contact.html
+++ b/contact.html
@@ -38,8 +38,8 @@
                 </div>
                 <nav>
                     <ul class="nav">
-                        <li class="nav-item"><a href="homePage.html" class="nav-link text-white">Home</a></li>
-                        <li class="nav-item"><a href="homePage.html#research" class="nav-link text-white">Research</a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link text-white">Home</a></li>
+                        <li class="nav-item"><a href="index.html#research" class="nav-link text-white">Research</a></li>
                         <li class="nav-item"><a href="education.html" class="nav-link text-white">Education</a></li>
                     </ul>
                 </nav>
