--- a/education.html
+++ b/education.html
@@ -87,8 +87,8 @@
                 </div>
                 <nav>
                     <ul class="nav">
-                        <li class="nav-item"><a href="homePage.html" class="nav-link text-white">Home</a></li>
-                        <li class="nav-item"><a href="homePage.html#research" class="nav-link text-white">Research</a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link text-white">Home</a></li>
+                        <li class="nav-item"><a href="index.html#research" class="nav-link text-white">Research</a></li>
                         <li class="nav-item"><a href="contact.html" class="nav-link text-white">Contact</a></li>
                     </ul>
                 </nav>
@@ -97,7 +97,7 @@
     </header>
 
     <main class="container py-5">
-        <a href="homePage.html" class="btn btn-custom-green mb-4">← Home</a>
+        <a href="index.html" class="btn btn-custom-green mb-4">← Home</a>
 
         <h1 class="mb-4">Education</h1>
 
