--- a/thermoluminescence-dosimetry.html
+++ b/thermoluminescence-dosimetry.html
@@ -38,7 +38,7 @@
                 </div>
                 <nav>
                     <ul class="nav">
-                        <li class="nav-item"><a href="homePage.html" class="nav-link text-white">Home</a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link text-white">Home</a></li>
                         <li class="nav-item"><a href="education.html" class="nav-link text-white">Education</a></li>
                         <li class="nav-item"><a href="contact.html" class="nav-link text-white">Contact</a></li>
                     </ul>
