--- a/Additional research.html
+++ b/Additional research.html
@@ -38,7 +38,7 @@
                 </div>
                 <nav>
                     <ul class="nav">
-                        <li class="nav-item"><a href="homePage.html" class="nav-link text-white">Home</a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link text-white">Home</a></li>
                         <li class="nav-item"><a href="education.html" class="nav-link text-white">Education</a></li>
                         <li class="nav-item"><a href="contact.html" class="nav-link text-white">Contact</a></li>
                     </ul>
@@ -48,7 +48,7 @@
     </header>
 
     <main class="container py-5">
-        <a href="homePage.html" class="btn btn-custom-green mb-4">← Home</a>
+        <a href="index.html" class="btn btn-custom-green mb-4">← Home</a>
 
         <h1 class="mb-4">Applicability of Newly Developed Lithium Zinc Borate Material for Thermoluminescent Dosimetry</h1>
 
