--- a/education.html
+++ b/education.html
@@ -43,7 +43,7 @@
         link.href = "GRE.pdf"; // Replace with the actual file path or URL
 
         // Set the download attribute with a default file name
-        link.download = "yourfile.txt"; // This sets the file name for the download
+        link.download = "GRE.pdf"; // This sets the file name for the download
 
         // Append the anchor to the body (necessary for Firefox)
         document.body.appendChild(link);
@@ -63,7 +63,7 @@
         link.href = "IELTS.pdf"; // Replace with the actual file path or URL
 
         // Set the download attribute with a default file name
-        link.download = "yourfile_2.txt"; // This sets the file name for the download
+        link.download = "IELTS.pdf"; // This sets the file name for the download
 
         // Append the anchor to the body (necessary for Firefox)
         document.body.appendChild(link);
