--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <section id="skills" class="mb-5">
             <h3 class="h2 mb-4">Skills</h3>
             <div class="card">
-                <div class="card-body">
+                <div class="card-body d-flex flex-wrap justify-content-center">
                     <span class="badge bg-custom-green me-2 mb-2">Radiation Detection</span>
                     <span class="badge bg-custom-green me-2 mb-2">Materials Characterization</span>
                     <span class="badge bg-custom-green me-2 mb-2">Thermoluminescence Dosimetry</span>
