--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
             <div class="card">
                 <div class="card-body d-flex flex-wrap justify-content-center align-items-center">
                     <span class="badge bg-custom-green me-2 mb-2">Radiation Detection</span>
-                    <span class="badge bg-custom-green me-2 mb-2">Materials Characterization</span>
-                    <span class="badge bg-custom-green me-2 mb-2">Thermoluminescence Dosimetry</span>
+                    <span class="badge bg-custom-green me-2 mb-2">Material Characterization</span>
+                    <span class="badge bg-custom-green me-2 mb-2">Thermoluminescent Dosimetry</span>
                     <span class="badge bg-custom-green me-2 mb-2">Autodesk Fusion 360</span>
                     <span class="badge bg-custom-green me-2 mb-2">Origin</span>
                     <span class="badge bg-custom-green me-2 mb-2">X'pert HighScore plus</span>
