--- a/thermoluminescence-dosimetry.html
+++ b/thermoluminescence-dosimetry.html
@@ -158,7 +158,7 @@
             <div class="card">
                 <div class="card-body">
                     <ol>
-                        <li>Synthesis of LiMgBO3:Zn,Y using solid-state reaction method</li>
+                        <li>Synthesis of LiMgBO<sub>3</sub>:Zn,Y using solid-state reaction method</li>
                         <li>Characterization of physical properties using X-ray diffraction (XRD), Fourier-transform infrared spectroscopy (FTIR) and Transmission electron microscopy (TEM)</li>
                         <li>Gamma irradiation of samples using Co-60 source</li>
                         <li>Thermoluminescence measurements using TLD reader</li>
@@ -188,7 +188,7 @@
             <h2 class="h3 mb-3">Results and Impact</h2>
             <div class="card">
                 <div class="card-body">
-                    <p>The research demonstrated the potential of LiMgBO3:Zn,Y as a thermoluminescent dosimeter material. Key outcomes include:</p>
+                    <p>The research demonstrated the potential of LiMgBO<sub>3</sub>:Zn,Y as a thermoluminescent dosimeter material. Key outcomes include:</p>
                     <ul>
                         <li>Improved sensitivity compared to undoped LiMgBO3</li>
                         <li>Monoclinic crystal structure with nanoscale crystallite size</li>
