--- a/thermoluminescence-dosimetry.html
+++ b/thermoluminescence-dosimetry.html
@@ -190,7 +190,7 @@
                 <div class="card-body">
                     <p>The research demonstrated the potential of LiMgBO<sub>3</sub>:Zn,Y as a thermoluminescent dosimeter material. Key outcomes include:</p>
                     <ul>
-                        <li>Improved sensitivity compared to undoped LiMgBO3</li>
+                        <li>Improved sensitivity compared to undoped LiMgBO<sub>3</sub></li>
                         <li>Monoclinic crystal structure with nanoscale crystallite size</li>
                         <li>Good linearity in dose response over a wide range</li>
                         <li>Potential for use in personal and environmental dosimetry</li>
