--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <h3 class="h2 mb-4">About Me</h3>
             <div class="card border-start border-4 border-custom-green">
                 <div class="card-body">
-                    <p>I am a recent graduate in Nuclear Science and Engineering from the Military Institute of Science and Technology (MIST), with a strong passion for exploring the interactions between radiation and materials. My research journey has honed my skills in material synthesis, material characterization, and understanding radiation effects, particularly in the context of dosimetry, nuclear safety, and health physics.
+                    <p>I am a recent graduate in Nuclear Science and Engineering, with a strong passion for exploring the interactions between radiation and materials. My research journey has honed my skills in material synthesis, material characterization, and understanding radiation effects, particularly in the context of dosimetry, nuclear safety, and health physics.
 My experiences have deepened my enthusiasm for studying radiation-matter interactions and their applications. I am eager to apply my knowledge, learn and grow in fields like clean energy, radiation-resistant materials, and the safe implementation of nuclear technologies in both industry and research.</p>
                 </div>
             </div>
