--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ My experiences have deepened my enthusiasm for studying radiation-matter interac
                             </h6>
                             <p class="card-text">Graduation: April, 2023</p>
                             <p class="card-text">Cumulative GPA: 3.43/4.00</p>
-                            <a href="education.html" class="text-custom-green">View more details</a>
+                            <a href="education.html" class="text-custom-green">Learn more</a>
                         </div>
                         <div class="col-md-3">
                             <img src="logo.png" alt="MIST Logo" class="img-fluid rounded">
