--- a/Additional research.html
+++ b/Additional research.html
@@ -169,7 +169,7 @@
             <h2 class="h3 mb-3">Acknowledgements</h2>
             <div class="card">
                 <div class="card-body">
-                    <p>This research was conducted at the Atomic Energy Center Dhaka, Bangladesh, with support from the Bangladesh Atomic Energy Commission and the Military Institute of Science and Technology (MIST). We are grateful for their facilities and resources that made this study possible.</p>
+                    <p>This research is being conducted at the Atomic Energy Centre Dhaka, Bangladesh, with support from the Bangladesh Atomic Energy Commission. We are grateful for their facilities and resources that made this study possible.</p>
                 </div>
             </div>
         </section>
