--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ My experiences have deepened my enthusiasm for studying radiation-matter interac
         <section id="research" class="mb-5">
             <h3 class="h2 mb-4">Additional Research Experience</h3>
             <div class="card h-100 border-top border-4 border-custom-green">
-                <img src="Linac whole.jpg" style="width: auto; height: 400px; object-fit: contain;" class="card-img-top" alt="Radiation Survey and Rescue Rover">
+                <img src="annealing.jpg" style="width: auto; height: 400px; object-fit: contain;" class="card-img-top" alt="Radiation Survey and Rescue Rover">
                 <div class="card-body">
                     <h4 class="card-title">Applicability of Newly Developed Lithium Zinc Borate Material for Thermoluminescent Dosimetry</h4>
                     <h6 class="card-subtitle mb-2 text-muted">Currently working on this research with Dr. Al-Mamun and Dr. A.K.M. Mizanur Rahman as a research student</h6>
