--- a/Additional research.html
+++ b/Additional research.html
@@ -82,6 +82,10 @@
                                 </video>
                                 <p class="mt-2 text-center">TL reading using a HARSHAW 3500 TL reader</p>
                             </div>
+                            <div class="carousel-item">
+                                <img src="TEMr.jpg" style="width: auto; height: 700px;object-fit: contain;" class="d-block w-100" alt="Thermoluminescence Dosimetry Setup 2">
+                                <p class="mt-2 text-center">HRTEM image of the synthesized LiZnBO<sub>3</sub></p>
+                            </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#projectCarousel" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true" style="background-color: #cfe6dabb; border-radius: 80%; width: 55px; height: 55px;"></span>
