--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ My experiences have deepened my enthusiasm for studying radiation-matter interac
                         <p></p>
                         <img src="pallete.jpeg" style="width: auto; height: 400px;object-fit: contain;" class="card-img-top" alt="Thermoluminescence Dosimetry Setup">
                         <div class="card-body">
-                            <h4 class="card-title">Thermoluminescent Dosimetry Research</h4>
+                            <h4 class="card-title">Thermoluminescence Dosimetry Research</h4>
                             <h6 class="card-subtitle mb-2 text-muted">Undergraduate Thesis</h6>
                             <p class="card-text">Synthesized and characterized Zinc and Yttrium-doped LiMgBO<sub>3</sub> for thermoluminescence dosimetry. Assessed physical properties and studied thermoluminescence response after gamma irradiation.</p>
                             <a href="thermoluminescence-dosimetry.html" class="text-custom-green">Learn more</a>
@@ -154,7 +154,7 @@ My experiences have deepened my enthusiasm for studying radiation-matter interac
             <div class="card h-100 border-top border-4 border-custom-green">
                 <img src="annealing.jpg" style="width: auto; height: 400px; object-fit: contain;" class="card-img-top" alt="Radiation Survey and Rescue Rover">
                 <div class="card-body">
-                    <h4 class="card-title">Applicability of Newly Developed Lithium Zinc Borate Material for Thermoluminescent Dosimetry</h4>
+                    <h4 class="card-title">Applicability of Newly Developed Lithium Zinc Borate Material for Thermoluminescence Dosimetry</h4>
                     <h6 class="card-subtitle mb-2 text-muted">Currently working on this research with Dr. Al-Mamun and Dr. A.K.M. Mizanur Rahman as a research student</h6>
                  <p class="card-text">Irradiation and analysis of characteristics such as energy dependency, fading, and reproducibility for the newly developed LiZnBO<sub>3</sub>.</p>
                     <a href="Additional research.html" class="text-custom-green">Learn more</a>
@@ -216,7 +216,7 @@ My experiences have deepened my enthusiasm for studying radiation-matter interac
                 <div class="card-body d-flex flex-wrap justify-content-center align-items-center">
                     <span class="badge bg-custom-green me-2 mb-2">Radiation Detection</span>
                     <span class="badge bg-custom-green me-2 mb-2">Material Characterization</span>
-                    <span class="badge bg-custom-green me-2 mb-2">Thermoluminescent Dosimetry</span>
+                    <span class="badge bg-custom-green me-2 mb-2">Thermoluminescence Dosimetry</span>
                     <span class="badge bg-custom-green me-2 mb-2">Autodesk Fusion 360</span>
                     <span class="badge bg-custom-green me-2 mb-2">Origin</span>
                     <span class="badge bg-custom-green me-2 mb-2">X'pert HighScore plus</span>
