--- a/thermoluminescence-dosimetry.html
+++ b/thermoluminescence-dosimetry.html
@@ -50,13 +50,13 @@
     <main class="container py-5">
         <a href="index.html" class="btn btn-custom-green mb-4">← Home</a>
 
-        <h1 class="mb-4">Thermoluminescent Dosimetry Research</h1>
+        <h1 class="mb-4">Thermoluminescence Dosimetry Research</h1>
 
         <section class="mb-5">
             <h2 class="h3 mb-3">Project Overview</h2>
             <div class="card">
                 <div class="card-body">
-                    <p>This research focused on the synthesis and characterization of Zinc and Yttrium doped Lithium Magnesium Borate (LiMgBO<sub>3</sub>) for use in thermoluminescent dosimetry. The study aimed to develop and assess new materials for improved radiation detection and measurement. This research took place at the Atomic Energy Center Dhaka, Bangladesh.</p>
+                    <p>This research focused on the synthesis and characterization of Zinc and Yttrium doped Lithium Magnesium Borate (LiMgBO<sub>3</sub>) for use in Thermoluminescence dosimetry. The study aimed to develop and assess new materials for improved radiation detection and measurement. This research took place at the Atomic Energy Center Dhaka, Bangladesh.</p>
                     <div id="projectCarousel" class="carousel slide mb-4" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
