--- a/Additional research.html
+++ b/Additional research.html
@@ -50,13 +50,13 @@
     <main class="container py-5">
         <a href="index.html" class="btn btn-custom-green mb-4">← Home</a>
 
-        <h1 class="mb-4">Applicability of Newly Developed Lithium Zinc Borate Material for Thermoluminescent Dosimetry</h1>
+        <h1 class="mb-4">Applicability of Newly Developed Lithium Zinc Borate Material for Thermoluminescence Dosimetry</h1>
 
         <section class="mb-5">
             <h2 class="h3 mb-3">Project Overview</h2>
             <div class="card">
                 <div class="card-body">
-                    <p>This study focuses on the synthesis and characterization of Lithium Zinc Borate for its potential application in thermoluminescent dosimetry. The research is currently ongoing, supervised by Dr. Al-Mamun and Dr. A.K.M. Mizanur Rahman at the Atomic Energy Centre, Dhaka, Bangladesh.</p>
+                    <p>This study focuses on the synthesis and characterization of Lithium Zinc Borate for its potential application in Thermoluminescence dosimetry. The research is currently ongoing, supervised by Dr. Al-Mamun and Dr. A.K.M. Mizanur Rahman at the Atomic Energy Centre, Dhaka, Bangladesh.</p>
                     <div id="projectCarousel" class="carousel slide mb-4" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
