--- a/radiation-robot.html
+++ b/radiation-robot.html
@@ -107,7 +107,7 @@
                         </div>
                         <div class="col-md-9">
                             <h3 class="h5">Md. Sifatul Muktadir</h3>
-                            <p class="mb-1">Program coordinator and Faculty</p>
+                            <p class="mb-1">Assistant Professor</p>
                             <p class="mb-1">Department of Nuclear Science and Engineering</p>
                             <p class="mb-1">Military Institute of Science and Technology (MIST), Dhaka</p>
                             <p class="text-custom-green">
