--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@ My experiences have deepened my enthusiasm for studying radiation-matter interac
                                 <th scope="row">3</th>
                                 <td>Optimized LiZnBO<sub>3</sub> Phosphor as a Promising Candidate for Low Dose Radiation Dosimetry</td>
                                 <td>Nuclear Engineering and Technology</td>
-                                <td>Under Review</td>
-                                <td>N/A</td>
+                                <td>Published</td>
+                                <td><a href="https://www.sciencedirect.com/science/article/pii/S1738573324006788?via%3Dihub" target="_blank">View Article</a></td>
                             </tr>
                         </tbody>
                     </table>
