--- a/Additional research.html
+++ b/Additional research.html
@@ -163,8 +163,11 @@
             <div class="card">
                 <div class="card-body">
                     <ul>
-                        <li>"Optimized LiZnBO<sub>3</sub> Phosphor as a Promising Candidate for Low Dose Radiation Dosimetry," Under Review, Nuclear Engineering and Technology. </li>
+                        <li>"Optimized LiZnBO<sub>3</sub> Phosphor as a Promising Candidate for Low Dose Radiation Dosimetry"</li>
                     </ul>
+                    <a href="https://www.sciencedirect.com/science/article/pii/S1738573324006788?via%3Dihub" target="_blank" rel="noopener noreferrer" class="btn btn-custom-green mt-3">
+                        <i class="bi bi-file-earmark-text me-2"></i> View Published Paper
+                    </a>
                 </div>
             </div>
         </section>
