--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,10 @@
                         <a href="mailto:mnhassan.academic@gmail.com" class="text-decoration-none text-dark">mnhassan.academic@gmail.com</a>
                     </li>
                     <li class="mb-3">
+                        <i class="bi bi-envelope-fill text-custom-green me-2"></i>
+                        <a href="mailto:nazmulhassan1979@gmail.com" class="text-decoration-none text-dark">nazmulhassan1979@gmail.com</a>
+                    </li>
+                    <li class="mb-3">
                         <i class="bi bi-linkedin text-custom-green me-2"></i>
                         <a href="https://www.linkedin.com/in/md-nazmul-hassan-5785851aa?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B4hbh%2FXmwQYeeGXbBYRGUDw%3D%3D" target="_blank" rel="noopener noreferrer" class="text-decoration-none text-dark">LinkedIn</a>
                     </li>
