--- a/index.html
+++ b/index.html
@@ -202,6 +202,13 @@ My experiences have deepened my enthusiasm for studying radiation-matter interac
                                 <td>Published</td>
                                 <td><a href="https://www.sciencedirect.com/science/article/pii/S1738573324006788?via%3Dihub" target="_blank">View Article</a></td>
                             </tr>
+                             <tr>
+                                <th scope="row">2</th>
+                                <td>Exploring Dysprosium Doped Lithium Strontium Borate Based Phosphor for Dosimetry Application</td>
+                                <td>Sensors and Actuators: A. Physical</td>
+                                <td>Under Review</td>
+                                <td>N/A</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
