--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             const link = document.createElement("a");
     
             // Set the URL of the file to be downloaded
-            link.href = "CV_Hassan.pdf"; // Replace with the actual file path or URL
+            link.href = "CV_Hassan_u.pdf"; // Replace with the actual file path or URL
     
             // Set the download attribute with a default file name
             link.download = "CV_Hassan.pdf"; // This sets the file name for the download
@@ -77,7 +77,7 @@
 
     <main class="container py-5">
         <div class="row-md-3" style="display: flex; justify-content: center; align-items: center;">
-            <img src="profile-pic (1).png" alt="Dr. Md. Sifatul Muktadir" width="350" height="350" class="rounded-circle" >
+            <img src="profile-pic (1).png" alt="Md Nazmul Hassan" width="350" height="350" class="rounded-circle" >
         </div>
         <section class="text-center mb-5">
             <h2 class="display-4 mb-3">Nuclear Engineering Graduate</h2>
