--- a/education.html
+++ b/education.html
@@ -345,13 +345,13 @@
                             <div id="nppCarousel4" class="carousel slide mb-4" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="Reactor-3.jpeg" style="width: auto; height: 700px;object-fit: contain;" class="d-block w-100" alt="Nuclear Power Plant Workshop">
+                                        <img src="Reactor-3.jpg" style="width: auto; height: 700px;object-fit: contain;" class="d-block w-100" alt="Nuclear Power Plant Workshop">
                                     </div>
                                     <div class="carousel-item">
                                         <img src="Reactor-2.jpeg" style="width: auto; height: 700px;object-fit: contain;" class="d-block w-100" alt="Nuclear Power Plant Workshop">
                                     </div>
                                     <div class="carousel-item active">
-                                        <img src="Reactor-4.jpeg" style="width: auto; height: 700px;object-fit: contain;" class="d-block w-100" alt="Nuclear Power Plant Workshop">
+                                        <img src="Reactor-4.jpg" style="width: auto; height: 700px;object-fit: contain;" class="d-block w-100" alt="Nuclear Power Plant Workshop">
                                     </div>
                                     <div class="carousel-item">
                                         <img src="Reactor-1.jpeg" style="width: auto; height: 700px;object-fit: contain;" class="d-block w-100" alt="Nuclear Power Plant Workshop">
