--- a/education.html
+++ b/education.html
@@ -350,7 +350,7 @@
                                     <div class="carousel-item">
                                         <img src="Reactor-2.jpeg" style="width: auto; height: 700px;object-fit: contain;" class="d-block w-100" alt="Nuclear Power Plant Workshop">
                                     </div>
-                                    <div class="carousel-item active">
+                                    <div class="carousel-item">
                                         <img src="Reactor-4.jpg" style="width: auto; height: 700px;object-fit: contain;" class="d-block w-100" alt="Nuclear Power Plant Workshop">
                                     </div>
                                     <div class="carousel-item">
