--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ My experiences have deepened my enthusiasm for studying radiation-matter interac
         </section>
  <!--Additional research section-->
         <section id="research" class="mb-5">
-            <h3 class="h2 mb-4">Additional Research Experience</h3>
+           <!-- <h3 class="h2 mb-4">Additional Research Experience</h3> -->
             <div class="card h-100 border-top border-4 border-custom-green">
                 <img src="Linac whole.jpg" style="width: auto; height: 400px; object-fit: contain;" class="card-img-top" alt="Radiation Survey and Rescue Rover">
                 <div class="card-body">
