--- a/education.html
+++ b/education.html
@@ -249,7 +249,7 @@
                     </ul>
                     <div class="tab-content" id="pills-tabContent">
                         <div class="tab-pane fade show active" id="pills-medical" role="tabpanel" tabindex="0">
-                            <h3 class="h4 mb-3">Medical Imaging and Radiography Certification Course</h3>
+                            <h3 class="h4 mb-3">Medical Imaging and Radiotherapy Certification Course</h3>
                             <p class="text-muted">October 25 - November 1, 2022</p>
                             <div id="nppCarousel1" class="carousel slide mb-4" data-bs-ride="carousel">
                                 <div class="carousel-inner">
@@ -281,7 +281,7 @@
                                 
                             </div>
                             <p><strong>Location:</strong> Ahsania Mission Cancer & General Hospital, Uttara</p>
-                            <p>Completed a comprehensive certification course in Medical Imaging and Radiography, gaining practical insights through an industrial visit to a leading cancer hospital.</p>
+                            <p>Completed a comprehensive certification course in Medical Imaging and Radiotherapy, gaining practical insights through an industrial visit to a leading cancer hospital.</p>
                         </div>
 
                         <div class="tab-pane fade" id="pills-quality" role="tabpanel" tabindex="0">
