--- a/thermoluminescence-dosimetry.html
+++ b/thermoluminescence-dosimetry.html
@@ -60,7 +60,7 @@
                     <div id="projectCarousel" class="carousel slide mb-4" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="Graphical Abstract.png" style="width: auto; height: 700px;object-fit: contain;" class="d-block w-100" alt="Thermoluminescence Dosimetry Setup 1">
+                                <img src="Graphical Abstract_1.png" style="width: auto; height: 700px;object-fit: contain;" class="d-block w-100" alt="Thermoluminescence Dosimetry Setup 1">
                                 <p class="mt-2 text-center">Graphical abstract of the research</p>
                             </div>
                             <div class="carousel-item">
