--- a/thermoluminescence-dosimetry.html
+++ b/thermoluminescence-dosimetry.html
@@ -61,7 +61,7 @@
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img src="Graphical Abstract_1.png" style="width: auto; height: 700px;object-fit: contain;" class="d-block w-100" alt="Thermoluminescence Dosimetry Setup 1">
-                                <p class="mt-2 text-center">Graphical abstract of the research</p>
+                                <p class="mt-2 text-center">Overview of the research</p>
                             </div>
                             <div class="carousel-item">
                                 <img src="grining and heating.png" style="width: auto; height: 700px;object-fit: contain;" class="d-block w-100" alt="Thermoluminescence Dosimetry Setup 2">
