--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ My experiences have deepened my enthusiasm for studying radiation-matter interac
                             <tr>
                                 <th scope="row">2</th>
                                 <td>Exploring the Effect of Zinc Doping on the Thermoluminescence Behavior of Lithium Magnesium Borate Exposed to Gamma Radiation</td>
-                                <td>Applied Radiation and Isotopes</td>
+                                <td>Journal of Radiation Research and Applied Sciences (JRRAS)</td>
                                 <td>Under Review</td>
                                 <td>N/A</td>
                             </tr>
