--- a/thermoluminescence-dosimetry.html
+++ b/thermoluminescence-dosimetry.html
@@ -223,7 +223,7 @@
             <div class="card">
                 <div class="card-body">
                     <ul>
-                        <li>"Exploring the Effect of Zinc Doping on the Thermoluminescence Behavior of Lithium Magnesium Borate Exposed to Gamma Radiation," Under Review, Applied Radiation and Isotopes. </li>
+                        <li>"Exploring the Effect of Zinc Doping on the Thermoluminescence Behavior of Lithium Magnesium Borate Exposed to Gamma Radiation," Under Review, Journal of Radiation Research and Applied Sciences (JRRAS). </li>
                     </ul>
                 </div>
             </div>
