--- a/index.html
+++ b/index.html
@@ -203,9 +203,16 @@ My experiences have deepened my enthusiasm for studying radiation-matter interac
                                 <td><a href="https://www.sciencedirect.com/science/article/pii/S1738573324006788?via%3Dihub" target="_blank">View Article</a></td>
                             </tr>
                              <tr>
-                                <th scope="row">2</th>
+                                <th scope="row">4</th>
                                 <td>Exploring Dysprosium Doped Lithium Strontium Borate Based Phosphor for Dosimetry Application</td>
-                                <td>Sensors and Actuators: A. Physical</td>
+                                <td> Journal of Alloys and Compounds</td>
+                                <td>Under Review</td>
+                                <td>N/A</td>
+                            </tr>
+                             <tr>
+                                <th scope="row">5</th>
+                                <td>Thermoluminescence study of Electron-Irradiated LiZnBO<sub>3</sub> Phosphor for Dosimetry Application</td>
+                                <td>Nuclear Engineering and Technology</td>
                                 <td>Under Review</td>
                                 <td>N/A</td>
                             </tr>
