--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
                     </li>
                     <li class="mb-3">
                         <i class="bi bi-envelope-fill text-custom-green me-2"></i>
-                        <a href="mailto:mnhassan.academic@gmail.com" class="text-decoration-none text-dark">mnhassan.academic@gmail.com</a>
+                        <a href="mailto:mnhassan.academic@gmail.com" class="text-decoration-none text-dark">mnhassan.acad@gmail.com</a>
                     </li>
                     <li class="mb-3">
                         <i class="bi bi-envelope-fill text-custom-green me-2"></i>
