--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
         <section class="text-center mb-5">
             <h2 class="display-4 mb-3">Nuclear Engineering Graduate</h2>
             <p class="lead mb-4">Passionate about advancing nuclear technology for a sustainable future</p>
-            <button class="btn btn-custom-green btn-lg" onclick="downloadFile()">Download CV</button>
+            <!-- <button class="btn btn-custom-green btn-lg" onclick="downloadFile()">Download CV</button> -->
+            <button class="btn btn-custom-green btn-lg" onclick="window.open('CV_Hassan_u.pdf', 'CV')">View CV</button>
         </section>
 
         <section id="about" class="mb-5">
