--- a/thermoluminescence-dosimetry.html
+++ b/thermoluminescence-dosimetry.html
@@ -109,7 +109,7 @@
                             <p class="mb-1">Bangladesh Atomic Energy Commission</p>
                             <p class="mb-1">Supervisor for Materials Synthesis, Characterization and Analysis</p>
                             <p class="text-custom-green">
-                                <i class="bi bi-envelope me-1"></i>mamunfh@yahoo.com
+                                <i class="bi bi-envelope me-1"></i>mamunfh@yahoo.com; mdalmamun@cantab.net; mamunfh@baec.gov.bd 
                             </p>
                             <a href="https://www.linkedin.com/in/dr-md-al-mamun-45285237/" target="_blank" rel="noopener noreferrer" class="btn btn-sm btn-custom-green">
                                 <i class="bi bi-linkedin me-1"></i> LinkedIn
@@ -127,7 +127,7 @@
                             <p class="mb-1">Bangladesh Atomic Energy Commission</p>
                             <p class="mb-1">Supervisor for Radiation Dosimetry</p>
                             <p class="text-custom-green">
-                                <i class="bi bi-envelope me-1"></i>mizanbaec14@gmail.com
+                                <i class="bi bi-envelope me-1"></i>mizanbaec14@gmail.com; mizanbaec@baec.gov.bd
                             </p>
                         </div>
                     </div>
