--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             const link = document.createElement("a");
     
             // Set the URL of the file to be downloaded
-            link.href = "CV_Hassan_ukweb.pdf"; // Replace with the actual file path or URL
+            link.href = "CV_Hassan_ushort.pdf"; // Replace with the actual file path or URL
     
             // Set the download attribute with a default file name
             link.download = "CV_Hassan.pdf"; // This sets the file name for the download
@@ -83,7 +83,7 @@
             <h2 class="display-4 mb-3">Nuclear Engineering Graduate</h2>
             <p class="lead mb-4">Passionate about advancing nuclear technology for a sustainable future</p>
             <!-- <button class="btn btn-custom-green btn-lg" onclick="downloadFile()">Download CV</button> -->
-            <button class="btn btn-custom-green btn-lg" onclick="window.open('CV_Hassan_ukweb.pdf', ' ')">View CV</button>
+            <button class="btn btn-custom-green btn-lg" onclick="window.open('CV_Hassan_ushort.pdf', ' ')">View CV</button>
         </section>
 
         <section id="about" class="mb-5">
@@ -193,8 +193,8 @@ My experiences have deepened my enthusiasm for studying radiation-matter interac
                                 <th scope="row">2</th>
                                 <td>Exploring the Effect of Zinc Doping on the Thermoluminescence Behavior of Lithium Magnesium Borate Exposed to Gamma Radiation</td>
                                 <td>Journal of Radiation Research and Applied Sciences (JRRAS)</td>
-                                <td>Under Review</td>
-                                <td>N/A</td>
+                                <td>Published</td>
+                                <td><a href="https://www.sciencedirect.com/science/article/pii/S1687850725004996" target="_blank">View Article</a></td>
                             </tr>
                             <tr>
                                 <th scope="row">3</th>
