--- a/contact.html
+++ b/contact.html
@@ -62,6 +62,10 @@
                         <i class="bi bi-envelope-fill text-custom-green me-2"></i>
                         <a href="mailto:mnhassan.academic@gmail.com" class="text-decoration-none text-dark">mnhassan.acad@gmail.com</a>
                     </li>
+                      <li class="mb-3">
+                        <i class="bi bi-envelope-fill text-custom-green me-2"></i>
+                        <a href="mailto:mnhassan.academic@gmail.com" class="text-decoration-none text-dark">mnhassan.academic@gmail.com</a>
+                    </li>
                     <li class="mb-3">
                         <i class="bi bi-envelope-fill text-custom-green me-2"></i>
                         <a href="mailto:nazmulhassan1979@gmail.com" class="text-decoration-none text-dark">nazmulhassan1979@gmail.com</a>
