--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 </head>
 <body class="bg-light">
     <header class="bg-custom-dark text-white py-3 border-bottom border-4 border-custom-green">
-        <div class="container">
+        <div class="wrapper d-flex flex-column min-vh-100">
             <div class="d-flex justify-content-between align-items-center">
                 <div class="d-flex align-items-center">
                     <img src="profile-pic (1).png" alt="Profile picture" width="50" height="50" class="rounded-circle me-3">
