--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
         }
     </style>
 </head>
-<body class="d-flex flex-column min-vh-100">
+<body class="bg-light">
     <header class="bg-custom-dark text-white py-3 border-bottom border-4 border-custom-green">
         <div class="Container">
             <div class="d-flex justify-content-between align-items-center">
