--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@ My experiences have deepened my enthusiasm for studying radiation-matter interac
                                 <th scope="row">5</th>
                                 <td>Thermoluminescence study of Electron-Irradiated LiZnBO<sub>3</sub> Phosphor for Dosimetry Application</td>
                                 <td>Nuclear Engineering and Technology</td>
-                                <td>Under Review</td>
-                                <td>N/A</td>
+                                <td>Published</td>
+                                <td><a href="https://www.sciencedirect.com/science/article/pii/S1738573325004000?via%3Dihub" target="_blank">View Article</a></td>
                             </tr>
                         </tbody>
                     </table>
