--- a/contact.html
+++ b/contact.html
@@ -57,10 +57,10 @@
                     <li class="mb-3">
                         <i class="bi bi-geo-alt-fill text-custom-green me-2"></i>
                         Mirpur 14, Dhaka, Bangladesh
-                    </li>
+                    <!--</li>
                     <li class="mb-3">
                         <i class="bi bi-envelope-fill text-custom-green me-2"></i>
-                        <a href="mailto:mnhassan.academic@gmail.com" class="text-decoration-none text-dark">mnhassan.acad@gmail.com</a>
+                        <a href="mailto:mnhassan.academic@gmail.com" class="text-decoration-none text-dark">mnhassan.acad@gmail.com</a>-->
                     </li>
                       <li class="mb-3">
                         <i class="bi bi-envelope-fill text-custom-green me-2"></i>
