--- a/education.html
+++ b/education.html
@@ -183,9 +183,9 @@
                         </tr>
                       </tbody>
                     </table>
-                    <section class="text-center mb-3">
+                    <!--<section class="text-center mb-3">
                       <button class="btn btn-custom-green btn-sm" onclick="downloadFile()">Download GRE test report</button>
-                    </section>
+                    </section>-->
                   </div>
                   <!-- IELTS Section -->
                   <div class="col-md-6">
@@ -214,9 +214,9 @@
                         </tr>
                       </tbody>
                     </table>
-                    <section class="text-center mb-3">
+                   <!-- <section class="text-center mb-3">
                       <button class="btn btn-custom-green btn-sm" onclick="downloadFile_2()">Download IELTS test report</button>
-                    </section>
+                    </section>-->
                   </div>
                 </div>
               </div>
