--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@ My experiences have deepened my enthusiasm for studying radiation-matter interac
                              <tr>
                                 <th scope="row">4</th>
                                 <td>Exploring Dysprosium Doped Lithium Strontium Borate Based Phosphor for Dosimetry Application</td>
-                                <td> Journal of Alloys and Compounds</td>
-                                <td>Under Review</td>
+                                <td>Journal of Alloys and Compounds</td>
+                                <td>Accepted for publication</td>
                                 <td>N/A</td>
                             </tr>
                              <tr>
