--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@ My experiences have deepened my enthusiasm for studying radiation-matter interac
                                 <th scope="row">4</th>
                                 <td>Exploring Dysprosium Doped Lithium Strontium Borate Based Phosphor for Dosimetry Application</td>
                                 <td>Journal of Alloys and Compounds</td>
-                                <td>Accepted for publication</td>
-                                <td>N/A</td>
+                                <td>Published</td>
+                                <td><a href="https://www.sciencedirect.com/science/article/abs/pii/S0925838825051898" target="_blank">View Article</a></td>
                             </tr>
                              <tr>
                                 <th scope="row">5</th>
