--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             link.href = "CV_Hassan.pdf"; // Replace with the actual file path or URL
     
             // Set the download attribute with a default file name
-            link.download = "CV_Hassan"; // This sets the file name for the download
+            // link.download = "CV_Hassan"; // This sets the file name for the download
     
             // Append the anchor to the body (necessary for Firefox)
             document.body.appendChild(link);
