--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             link.href = "CV_Hassan.pdf"; // Replace with the actual file path or URL
     
             // Set the download attribute with a default file name
-            // link.download = "CV_Hassan"; // This sets the file name for the download
+            link.download = "CV_Hassan"; // This sets the file name for the download
     
             // Append the anchor to the body (necessary for Firefox)
             document.body.appendChild(link);
@@ -83,7 +83,7 @@
             <h2 class="display-4 mb-3">Nuclear Engineering Graduate</h2>
             <p class="lead mb-4">Passionate about advancing nuclear technology for a sustainable future</p>
             <!-- <button class="btn btn-custom-green btn-lg" onclick="downloadFile()">Download CV</button> -->
-            <button class="btn btn-custom-green btn-lg" onclick="window.open('CV_Hassan_ushort.pdf', ' ')">View CV</button>
+            <button class="btn btn-custom-green btn-lg" onclick="window.open('CV_Hassan.pdf', ' ')">View CV</button>
         </section>
 
         <section id="about" class="mb-5">
