--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
                         <a href="https://www.linkedin.com/in/md-nazmul-hassan-5785851aa?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B4hbh%2FXmwQYeeGXbBYRGUDw%3D%3D" target="_blank" rel="noopener noreferrer" class="text-decoration-none text-dark">LinkedIn</a>
                     </li>
                     <li class="mb-3">
-                        <i class="bi bi-r-square text-custom-green me-2"></i>
+                        <i class="bi bi-person-badge text-custom-green me-2"></i>
                         <a href="https://www.researchgate.net/profile/Md-Nazmul-Hassan-7?ev=prf_overview" target="_blank" rel="noopener noreferrer" class="text-decoration-none text-dark">ResearchGate</a>
                     </li>
                     <li class="mb-3">
